--- a/_posts/Coding_Test/Programmers_Test/2023-04-02-(MySQL)LV 4 문제 모음.md
+++ b/_posts/Coding_Test/Programmers_Test/2023-04-02-(MySQL)LV 4 문제 모음.md
@@ -230,9 +230,49 @@ limit 3;
 
 <br><br>
 
-## 문제 7 - 미친 난이도. 다시. 풀기.
+## 문제 7 - with(CTE)
 
 * **[자동차 대여 기록 별 대여 금액 구하기](https://school.programmers.co.kr/learn/courses/30/lessons/151141)**
+
+<br>
+
+### 코드
+
+```mysql
+with use_date as (
+select history_id, car_id, (datediff(end_date,start_date))+1 as using_date 
+    from car_rental_company_rental_history 
+)
+
+select b.history_id, 
+round((case 
+ when b.using_date>=7 and b.using_date<30 then b.using_date*a.daily_fee*(1-(select discount_rate from car_rental_company_discount_plan where car_type=a.car_type and duration_type like '7%')*0.01) 
+ when b.using_date>=30 and b.using_date<90 then b.using_date*a.daily_fee*(1-(select discount_rate from car_rental_company_discount_plan where car_type=a.car_type and duration_type like '30%')*0.01) 
+ when b.using_date>=90 then b.using_date*a.daily_fee*(1-(select discount_rate from car_rental_company_discount_plan where car_type=a.car_type and duration_type like '90%')*0.01) 
+ else b.using_date*a.daily_fee 
+end),0) as fee
+from car_rental_company_car a 
+join use_date b on (b.car_id=a.car_id)
+where a.car_type='트럭' 
+order by fee desc, b.history_id desc;
+```
+
+<br>
+
+### 풀이
+
+문제 : 대여 기록 별로 대여 금액(컬럼명: FEE) 를 구하자
+
+- 대여 기록 별 (그룹 history_id) -> 굳이 그룹 안해도 풀림
+- fee 를 구하기 위해 사용 날짜를 따로 with로 구해두자.(계산 편리)
+- 마지막 plan 테이블은 case when 에서 할인율로 해결하자. 
+  - case when 조건문의 경우 날짜로 한다는걸 생각.
+- 참고) with절에서 SELECT *를 사용할 경우에는 중복된 컬럼명을 명시적으로 처리하지 않으므로 직접 명시를 해줘야 join으로 인한 중복 컬럼 에러를 마주치지 않을 수 있다.
+
+<br><br>
+
+## 문제 8 - group by, having
+
 * **[특정 기간동안 대여 가능한 자동차들의 대여비용 구하기](https://school.programmers.co.kr/learn/courses/30/lessons/157339)**
 
 <br>
@@ -240,21 +280,172 @@ limit 3;
 ### 코드
 
 ```mysql
+with use_date as (
+select history_id, car_id, start_date, end_date 
+    from car_rental_company_rental_history 
+    group by car_id having max(end_date)<'2022-11-01'
+)
 
+select a.car_id, a.car_type, 
+round((
+   30*a.daily_fee*(1-(select discount_rate from car_rental_company_discount_plan where duration_type like '30%' and car_type=a.car_type )*0.01)
+      ),0) as fee
+from car_rental_company_car a join use_date b on (a.car_id=b.car_id)
+where a.car_type in ('세단', 'SUV') 
+group by a.car_id having fee >= 500000 and fee < 2000000 
+order by fee desc, a.car_type, a.car_id desc;
 ```
 
 <br>
 
 ### 풀이
 
-둘다 실패. 못 품..
-
-어렵다..  fee 컬럼 구하는걸 실패한 문제
-
-- with 사용해서 깔끔히 구하는 사람 참고
+- history엔 동일한 car_id가 여러개 이므로 join 하면 중복으로 여러개 생기고, 대여 가능 여부 판단이 불가.
+  - 이를 해결하는 핵심코드 : `group by car_id having max(end_date)<'2022-11-01'`
 
 <br><br>
 
-위 2개 다시 풀고... 나머지... 문제 정리후...
+## 문제 9 - bit 비교 자세히
 
-템플릿 만들자. 이후에는 정리한 LV1~4 문제들 다시 풀어보는..! 물론 알고리즘꺼도 풀기 시작해야함.
+* **[FrontEnd 개발자 찾기](https://school.programmers.co.kr/learn/courses/30/lessons/276035)**
+* **[언어별 개발자 분류하기](https://school.programmers.co.kr/learn/courses/30/lessons/276036)**
+
+<br>
+
+### 코드
+
+```mysql
+-- bit 비교? 1001 & 1000 -> 1000
+-- 조인 결과 중복이 발생하므로 distinct 필요한 쿼리
+-- 참고로 category가 front end 인 튜플이 여러개 임
+select distinct a.id, a.email, a.first_name, a.last_name from developers a, skillcodes b 
+where a.skill_code & b.code = b.code and b.category='Front End' 
+order by a.id;
+
+-- sum(CODE) 로 서브쿼리 만들어 비교하는 아이디어를 사용한 사람! 이런 풀이도 기억해두자.
+-- 참고로 category가 front end 인 튜플이 여러개 임
+select ID, EMAIL, FIRST_NAME, LAST_NAME
+from DEVELOPERS
+where SKILL_CODE&(select sum(CODE) from SKILLCODES where CATEGORY = 'Front End')
+order by ID
+
+-- 아니면 in? any? 연산자 사용해서 하는방식
+-- 참고로 category가 front end 인 튜플이 여러개 임
+0 < any (select skill_code & code
+from skillcodes
+where category = 'front end')
+```
+
+<br>
+
+```mysql
+-- GRADE 구하기 -> with 3 -> sum(bit) 활용
+with skill1 as (
+select sum(b.code) as fecode from skillcodes b where b.category like 'F%'
+), skill2 as (
+select b.code as pycode from skillcodes b where b.name like 'Python' 
+), skill3 as (
+select b.code as cscode from skillcodes b where b.name like 'C#' 
+), devs as (
+select 
+(case 
+ when a.skill_code&b.fecode and a.skill_code&c.pycode then 'A' 
+ when a.skill_code&d.cscode then 'B' 
+ when a.skill_code&b.fecode then 'C' 
+ end 
+) as grade, a.id, a.email 
+from developers a, skill1 b, skill2 c, skill3 d 
+)
+
+select grade, id, email 
+from devs
+where grade is not null
+order by grade, id;
+
+-- 서브쿼리 활용 -> 별칭 사용 위해 having 에서 not null
+select 
+(case 
+ when skill_code & (select code from skillcodes where name = 'python') and 
+0 < any (select skill_code & code from skillcodes where category = 'front end') then 'A'
+ when skill_code & (select code from skillcodes where name = 'C#') then 'B'
+ when 0 < any (select skill_code & code from skillcodes where category = 'front end') then 'C'
+end) as grade, id, email
+from developers
+group by grade, id, email
+having grade is not null
+order by grade asc, id asc;
+```
+
+<br>
+
+### 풀이
+
+코드 참고~! 주석 참고~!
+
+<br><br>
+
+## 문제 10 - with(CTE) recursive
+
+* **[특정 세대의 대장균 찾기](https://school.programmers.co.kr/learn/courses/30/lessons/301650)**
+
+<br>
+
+### 코드
+
+```mysql
+-- self join
+select c.id from ecoli_data a join ecoli_data b on (b.parent_id=a.id) join ecoli_data c on (c.parent_id=b.id) 
+where a.parent_id is null 
+order by c.id;
+```
+
+<br>
+
+```mysql
+-- self join -> recursive 풀이
+WITH RECURSIVE CTE
+AS
+(
+    SELECT ID, PARENT_ID, 1 AS DEPTH
+    FROM ECOLI_DATA
+    WHERE PARENT_ID IS NULL
+    UNION ALL
+    SELECT CHILD.ID, CHILD.PARENT_ID, CTE.DEPTH + 1
+    FROM ECOLI_DATA CHILD
+    INNER JOIN CTE
+        ON CHILD.PARENT_ID = CTE.ID
+)
+SELECT ID FROM CTE WHERE DEPTH = 3;
+```
+
+<br>
+
+### 풀이
+
+recursive 한 풀이와 아닌 풀이 둘 다 익혀두자.
+
+특히 recursive 한 풀이의 의미를 이해하기 위해 아래 문법을 참고
+
+```mysql
+with recursive test as (
+    -- non recursive
+    select 1 as hour
+    union all
+    -- recursive
+    select hour + 1
+    from test
+    -- terminate
+    where hour < 5
+)
+select * from rc;
+-- 출력??
+/*
+1
+2
+3
+4
+*/
+```
+
+<br><br>
+
