add: SQL템플릿 작성

--- a/_posts/Coding_Test/Programmers_Test/2023-03-01-(프로그래머스)코테 준비 시작(Intro).md
+++ b/_posts/Coding_Test/Programmers_Test/2023-03-01-(프로그래머스)코테 준비 시작(Intro).md
@@ -1,5 +1,5 @@
 ---
-title:  "[프로그래머스]코테 준비 Intro.."
+title:  "[프로그래머스]코테 준비 Intro"
 categories : [ProgrammersTest]
 tag : [백준, 프로그래머스, 알고리즘 문제풀이]
 toc: true
@@ -12,15 +12,13 @@ typora-root-url: ../../..
 
 
 
-## Intro..
+## Intro
 
 **'백준' 을 통해서 이미 코테 준비를 시작했었는데, 최근에 SQL문 관련한 문제는 '프로그래머스' 에서 풀 수 있다는걸 알게 되었다.**
 
-**따라서 '프로그래머스' 에서는 `SQL문` 관련한 문제들을 중점으로 풀어볼 생각이다.**  
-**또한 '카카오 코테' 문제와 같이 `실제 코테 문제` 들도 카테고리별로 분류가 되어있어서 시간이 된다면 이부분도 풀어볼 생각이다.**
+따라서 '프로그래머스' 에서는 `SQL문` 관련한 문제들을 중점으로 풀어볼 생각이다.  
 
-* **[SQL문 정리](https://bh946.github.io/database/DB-SQL(4)/)**
-  * 예전에 정리했던 SQL문 관련 문법인데 참고하자. (까먹고 있었네,,)
+또한 '카카오 코테' 문제와 같이 `기업 코테 문제` 들도 카테고리별로 분류가 되어있어서 시간이 된다면 이부분도 풀어볼 생각이다.
 
 <br><br>
 
