--- a/_posts/Coding_Test/Programmers_Test/2023-03-02-(MySQL)LV 1 문제 모음.md
+++ b/_posts/Coding_Test/Programmers_Test/2023-03-02-(MySQL)LV 1 문제 모음.md
@@ -12,7 +12,7 @@ typora-root-url: ../../..
 
 
 
-## Intro..
+## Intro
 
 SQL 문제들은 많이 없기 때문에 `LV 1 ~ LV 5` 까지 문제들을 레벨별로 모아서 한번에 정리하겠다.
 
@@ -91,7 +91,7 @@ SELECT count(*) as 'users' from user_info where age is null;
 
 `count(*)` 와 `where age is null` 만 이해하면 충분한 코드이다.
 
-* `count(*)` 는 조건에 맞는 튜플들 개수를 전부 구해준다.
+* `count(*)` 는 조건에 맞는 튜플들 개수를 전부 구해준다. (`*`는 null 값 까지 포함)
 * `where age is null` 은 `where age = null` 로 이해하면 되며, SQL에서는 `is null` 로 표기해야 하기 때문에 `is null` 을 사용한다.
 
 <br><br>
