--- a/_posts/Coding_Test/Programmers_Test/2023-03-03-(MySQL)LV 2 문제 모음.md
+++ b/_posts/Coding_Test/Programmers_Test/2023-03-03-(MySQL)LV 2 문제 모음.md
@@ -12,7 +12,7 @@ typora-root-url: ../../..
 
 
 
-## Intro..
+## Intro
 
 SQL 문제들은 많이 없기 때문에 `LV 1 ~ LV 5` 까지 문제들을 레벨별로 모아서 한번에 정리하겠다.
 
@@ -81,7 +81,8 @@ SELECT b.book_id, a.author_name, date_format(b.published_date,'%Y-%m-%d') as pub
 - natural join : `SELECT * from book b natural join author a where b.category = '경제';`
   - id 컬럼의 중복을 제거 (즉, id 컬럼 1개 출력 됨)
 
-다만, 행이 중복되어 나오는건 전혀 join 종류랑은 상관 없는 이야기.   
+따라서 행이 중복되어 나오는건 전혀 join 종류랑은 상관 없는 이야기. 그저 1:N, N:N 이런식의 관계에 join을 하게되면 중복 행이 발생할 가능성이 있는 것이다.   
+
 distinct를 사용해서 제거 필요.  
 물론, distinct를 사용하게끔 설계된 것은 잘 못 설계했을 가능성 높다.
 
