--- a/_posts/Coding_Test/Baekjoon_Test/2023-01-28-(백준)코테 준비 시작(Intro).md
+++ b/_posts/Coding_Test/Baekjoon_Test/2023-01-28-(백준)코테 준비 시작(Intro).md
@@ -1,5 +1,5 @@
 ---
-title:  "[백준]코테 준비 Intro.."
+title:  "[백준]코테 준비 Intro"
 categories : [BaekjoonTest, Baekjoon]
 tag : [백준, 프로그래머스, 알고리즘 문제풀이]
 toc: true
@@ -12,19 +12,17 @@ typora-root-url: ../../..
 
 
 
-## Intro..
+## Intro
 
-코테를 준비하기 위해서 백준 문제를 풀기 시작!!  
-예전에 `hello, world` 출력하는 수준 정도인 간단한 문제 한 두개를 풀어본 경험 외에는 백준 문제를  
-손대지 않았었는데, 이제 꾸준히 풀기로 시작!!
+코테를 준비하기 위해서 백준 문제를 풀기 시작!! 
 
 여러 유튜브나 정보들을 토대로 어떤 방식으로 문제를 풀어나갈지를 생각해보았다.
 
 <br>
 
-**참고**
+**참고(수정본)**
 
-- 이 글은 옛날에 작성했던 글인데 아래내용은 좀 **옛날 방식**인것 같다.
+- 이 글은 옛날에 작성했던 글인데 아래내용은 좀 **옛날 방식**인것 같아서 **최근에 느낀 방식**을 간략히 소개한다.
 - 지금은 좋은 알고리즘 강의가 많기 때문에 필자는 처음이면 꼭 **"강의듣기"**를 추천한다.
   - 예를들어 **완전탐색을 풀때 조합적 문제**가 많다라는 정보라던지 -> 이를 "순열,조합,부분집합" 으로 푸는형태가 대부분이라던지 등등
   - 이런것은 혼자 알아내기는 너무 힘들다고 생각을 한다.
@@ -56,7 +54,7 @@ typora-root-url: ../../..
 또한, 유튜버는 아래 소개한 개념들만 반드시 익힐것을 추천한다고 한다.  
 4년차 코테 강사였다고 하니 매우 신뢰성있는 의견인것 같아서 기록해두었다.
 
-**`누적합, 구현, 그래프이론, DFS, BFS, 트리순회, 완탐, 백트래킹, 비트마스킹, 그리디, 라인스위핑, 투포인터, LIS, 이분탐색, DP, 최단거리, 펜윅트리`**
+`누적합, 구현, 그래프이론, DFS, BFS, 트리순회, 완탐, 백트래킹, 비트마스킹, 그리디, 라인스위핑, 투포인터, LIS, 이분탐색, DP, 최단거리, 펜윅트리`
 
 <br><br>
 
