--- a/_posts/Coding_Test/Programmers_Test/2023-03-01-(프로그래머스)코테 준비 시작(Intro).md
+++ b/_posts/Coding_Test/Programmers_Test/2023-03-01-(프로그래머스)코테 준비 시작(Intro).md
@@ -20,5 +20,9 @@ typora-root-url: ../../..
 
 또한 '카카오 코테' 문제와 같이 `기업 코테 문제` 들도 카테고리별로 분류가 되어있어서 시간이 된다면 이부분도 풀어볼 생각이다.
 
+아래는 따로 정리한 SQL 템플릿이다.
+
+- [SQL 템플릿](https://bh946.github.io/programmerstest/(MySQL)SQL-%ED%85%9C%ED%94%8C%EB%A6%BF/)
+
 <br><br>
 
