--- a/_posts/Coding_Test/Baekjoon_Concept/2024-02-17-(백준_필수4)알고리즘 필수 코드암기.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2024-02-17-(백준_필수4)알고리즘 필수 코드암기.md
@@ -294,7 +294,7 @@ for (int i = 0; i < N-2; i++) { // N-2 -> i, st, en 순서 인덱스 임으로
     if(depth == M) {
       // 조합 생성 완료
     }
-    for(int i=1; i<=N; i++) {
+    for(int i=idx; i<=N; i++) {
       outArr[depth] = i;
       comb(depth+1, i+1);
     }
