--- a/_posts/Coding_Test/Baekjoon_Concept/2024-02-17-(백준_필수4)알고리즘 필수 코드암기.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2024-02-17-(백준_필수4)알고리즘 필수 코드암기.md
@@ -25,6 +25,28 @@ typora-root-url: ../../..
 **BFS, DFS, 순열, 조합, 부분집합**
 
 ```java
+  public static void main(String[] args) {
+//    bfs(0, 0);
+//    perm(0);
+//    permDup(0);
+//    comb(0,1);
+//    combDup(0, 1);
+//    subset(0);
+
+//    topological();
+//    floyd();
+//    dijkstra();
+//    prim();
+//    kruskal();
+
+//    System.out.println(binarySearch(1, 4));
+//    System.out.println(lower_bound(1, 4));
+//    System.out.println(upper_bound(1, 4));
+
+//    print_ver1();
+//    print_ver2();
+  }
+
 /**
  * BFS : 너비순회
  * 2차원 좌표상에 4방향 BFS 순회 구해보라. (중복방문 방지)
@@ -219,26 +241,28 @@ for (int i = 0; i < N-2; i++) { // N-2 -> i, st, en 순서 인덱스 임으로
   static int[] dx = {0,1,0,-1}; //오,아,왼,위
   static int[] dy = {1,0,-1,0}; //오,아,왼,위
   static void bfs(int cx, int cy) {
+    int N = 10; //크기 임의지정
     int level=0; int width=0; // level, width 는 그냥 참고용으로 넣음
-    boolean[][] visited = new boolean[5][5];
+    boolean[][] visited = new boolean[N + 1][N+1];
     Queue<Pair4> qu = new ArrayDeque<>();
     qu.offer(new Pair4(cx, cy));
     visited[cx][cy] = true;
-    while(!qu.isEmpty()) {
+    while (!qu.isEmpty()) {
       int size = qu.size();
       level++;
-      for(int s=0; s<size; s++){
-        Pair4 cur = qu.poll();
+      for (int s = 0; s < size; s++) {
         width++;
-        for(int i=0; i<4; i++){
-          int nx=cur.x+dx[i];
-          int ny=cur.y+dy[i];
-          if(nx<0||ny<0||nx>5||ny>5) continue;
-          if(visited[nx][ny]) continue;
-          qu.offer(new Pair4(nx, ny)); //큐삽입시점 중요
-          visited[nx][ny]=true; //방문시점 마찬가지
+        Pair4 cur = qu.poll();
+        System.out.print(cur+"\t");
+        for (int i = 0; i < 4; i++) {
+          Pair4 nxt = new Pair4(cur.x + dx[i], cur.y + dy[i]);
+          if(nxt.x<0||nxt.y<0||nxt.x>=N||nxt.y>=N 
+             ||visited[nxt.x][nxt.y]) continue;
+          qu.offer(nxt);
+          visited[nxt.x][nxt.y] = true;
         }
       }
+      System.out.println();
     }
   }
   static class Pair4 {
@@ -246,6 +270,13 @@ for (int i = 0; i < N-2; i++) { // N-2 -> i, st, en 순서 인덱스 임으로
     public Pair4(int x, int y){
       this.x=x;this.y=y;
     }
+  }
+  @Override
+  public String toString() {
+    return "Pair4{" +
+        "x=" + x +
+        ", y=" + y +
+        '}';
   }
 
 /**
@@ -259,29 +290,35 @@ for (int i = 0; i < N-2; i++) { // N-2 -> i, st, en 순서 인덱스 임으로
  * 중복순열 : "+중복" -> visited 없이
  */
   // 순열 nPm
-  static int N,M;
-  static boolean[] visited;
-  static int[] outArr;
+  static int N=5, M=3;
+  static boolean[] visited = new boolean[N+1];
+  static int[] outArr = new int[M+1];
   static void perm(int depth) {
-    if(depth == M) {
-      // 순열 생성 완료
+    //base condition
+    if (depth == M) {
+      System.out.println(Arrays.toString(outArr));
+      return;
     }
-    for(int i=1; i<=N; i++) {
+    //recursion
+    for (int i = 1; i <= N; i++) {
       if(visited[i]) continue;
-      visited[i]=true;
+      visited[i] = true;
       outArr[depth] = i;
-      perm(depth+1);
-      visited[i]=false; //backtracking
+      perm(depth + 1);
+      visited[i] = false; //backtracking
     }
   }
   // 중복순열
   static void permDup(int depth) {
-    if(depth == M) {
-      // 중복순열 생성 완료
+    //base condition
+    if (depth == M) {
+      System.out.println(Arrays.toString(outArr));
+      return;
     }
-    for(int i=1; i<=N; i++) {
+    //recursion
+    for (int i = 1; i <= N; i++) {
       outArr[depth] = i;
-      permDup(depth+1);
+      permDup(depth + 1);
     }
   }
 
@@ -291,22 +328,28 @@ for (int i = 0; i < N-2; i++) { // N-2 -> i, st, en 순서 인덱스 임으로
  */
   // 조합 nCm
   static void comb(int depth, int idx) {
-    if(depth == M) {
-      // 조합 생성 완료
+    //base condition
+    if (depth == M) {
+      System.out.println(Arrays.toString(outArr));
+      return;
     }
-    for(int i=idx; i<=N; i++) {
+    //recursion
+    for (int i = idx; i <= N; i++) {
       outArr[depth] = i;
-      comb(depth+1, i+1);
+      comb(depth + 1, i + 1);
     }
   }
   // 중복조합
   static void combDup(int depth, int idx) {
-    if(depth == M) {
-      // 중복조합 생성 완료
+    //base condition
+    if (depth == M) {
+      System.out.println(Arrays.toString(outArr));
+      return;
     }
-    for(int i=idx; i<=N; i++) {
+    //recursion
+    for (int i = idx; i <= N; i++) {
       outArr[depth] = i;
-      combDup(depth+1, i); // 이 차이밖에 없음. 한끗차이
+      combDup(depth + 1, i);
     }
   }
   // 참고) 조합 또다른 방식
@@ -317,13 +360,20 @@ for (int i = 0; i < N-2; i++) { // N-2 -> i, st, en 순서 인덱스 임으로
  * 부분집합 : nC0+nC1+...+nCn 즉, 조합과 유사 ("있다 or 없다") 경우의 수 -> visited의 T/F 에 재귀 2개
  */
   static void subset(int depth) {
-    if(depth == N) {
-      // 부분집합 완성
+    //base condition
+    if (depth == A) {
+      for (int i = 0; i < A; i++) {
+        if(visited2[i]) continue;
+        System.out.print(i+" ");
+      }
+      System.out.println();
+      return;
     }
-    visited[depth] = true;
+    //recursion
+    visited2[depth] = true;
     subset(depth+1);
-    visited[depth] = false;
-    subset(depth+1);
+    visited2[depth] = false;
+    subset(depth + 1);
   }
 
 ```
