--- a/_posts/Major/Algorithm_Concept/2022-12-28-(개념) Sort(정렬).md
+++ b/_posts/Major/Algorithm_Concept/2022-12-28-(개념) Sort(정렬).md
@@ -54,7 +54,7 @@ typora-root-url: ../../..
     바퀴마다 **맨 앞자리**가 옳게 채워지므로 이 숫자를 제외하고 다음 바퀴를 반복하는 구조
 
 * **복잡도 : 전부 최악 N^2**
-  * **선택정렬은 최선의 복잡도가 N이란 점 참고**
+  * **삽입정렬은 최선의 복잡도가 N이란 점 참고**
 
 <br><br>
 
